compiler/testData/diagnostics/tests/objects/ObjectsInheritance.kt

package toplevelObjectDeclarations

object CObj {}

object DOjb : <!UNRESOLVED_REFERENCE!>CObj<!> {}
